docs/7.52/md/abenabap_dynpros_abap_statements.md
---
title: "ABAP Statements for Dynpros"
description: |
  The following statements can be used to call and process dynpros(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_glosry.htm 'Glossary Entry') in an ABAP program: -   CALL SCREEN(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_screen.htm) -   SET PF-STAT
version: "7.52"
category: "ui"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_dynpros_abap_statements.htm"
abapFile: "abenabap_dynpros_abap_statements.htm"
keywords: ["loop", "do", "if", "try", "data", "abenabap", "dynpros", "abap", "statements"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [SAP GUI User Dialogs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_screens.htm) →  [Dynpros](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_dynpros.htm) → 

ABAP Statements for Dynpros

The following statements can be used to call and process [dynpros](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_glosry.htm "Glossary Entry") in an ABAP program:

-   [CALL SCREEN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_screen.htm)

-   [SET PF-STATUS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_pf-status_dynpro.htm)

-   [GET PF-STATUS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_pf.htm)

-   [SET TITLEBAR](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_titlebar_dynpro.htm)

-   [SUPPRESS DIALOG](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsuppress.htm)

-   [LOOP AT SCREEN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaploop_at_screen.htm)

-   [MODIFY SCREEN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmodify_screen.htm)

-   [SET CURSOR](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_cursor_dynpro.htm)

-   [GET CURSOR](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_cursor_dynpro.htm)

-   [CONTROLS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcontrols.htm)

-   [REFRESH CONTROL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaprefresh_control.htm)

-   [EXIT FROM STEP-LOOP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapexit_step-loop.htm)

-   [SET HOLD DATA](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_hold_data.htm)

-   [SET SCREEN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_screen.htm)

-   [LEAVE *\[*TO*\]* SCREEN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapleave_screen.htm)

Continue
[CALL SCREEN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_screen.htm)
[SET PF-STATUS - Dynpro](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_pf-status_dynpro.htm)
[GET PF-STATUS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_pf.htm)
[SET TITLEBAR - Dynpro](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_titlebar_dynpro.htm)
[SUPPRESS DIALOG](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsuppress.htm)
[LOOP AT SCREEN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaploop_at_screen.htm)
[SET CURSOR - Dynpro](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_cursor_dynpro.htm)
[GET CURSOR - Dynpro](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_cursor_dynpro.htm)
[CONTROLS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcontrols.htm)
[REFRESH CONTROL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaprefresh_control.htm)
[EXIT FROM STEP-LOOP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapexit_step-loop.htm)
[SET HOLD DATA](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_hold_data.htm)
[SET SCREEN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_screen.htm)
[LEAVE \[TO\] SCREEN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapleave_screen.htm)